[gd_scene load_steps=4 format=3 uid="uid://dkf622ueavp5a"]

[ext_resource type="Script" path="res://scores.gd" id="1_t02bf"]

[sub_resource type="LabelSettings" id="LabelSettings_1ffxh"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_vqs27"]
font_size = 40

[node name="Scores" type="Control" node_paths=PackedStringArray("P1", "P2")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t02bf")
P1 = NodePath("")
P2 = NodePath("")

[node name="P1Score" type="Label" parent="."]
layout_mode = 0
offset_right = 270.0
offset_bottom = 55.0
text = "0"
label_settings = SubResource("LabelSettings_1ffxh")
horizontal_alignment = 1

[node name="P2Score" type="Label" parent="."]
layout_mode = 0
offset_left = 1650.0
offset_right = 1920.0
offset_bottom = 55.0
text = "0"
label_settings = SubResource("LabelSettings_1ffxh")
horizontal_alignment = 1

[node name="Timer" type="Label" parent="."]
layout_mode = 0
offset_left = 880.0
offset_right = 1040.0
offset_bottom = 55.0
text = "00"
label_settings = SubResource("LabelSettings_vqs27")
horizontal_alignment = 1

[node name="TimerThing" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="timeout" from="TimerThing" to="." method="_on_timer_thing_timeout"]
